--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ag-grid/dist/styles/ag-grid.css",
               "node_modules/ag-grid/dist/styles/ag-theme-fresh.css",
               "node_modules/ag-grid/dist/styles/ag-theme-blue.css",
