--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "ag-grid": "^17.1.1",
     "ag-grid-angular": "^17.1.0",
+    "bootstrap": "^4.1.2",
     "core-js": "^2.4.1",
     "ng2-file-upload": "^1.3.0",
     "npm": "^6.1.0",
-    "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.0.0-rc.0",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
