--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.3",
     "@angular-devkit/core": "^0.6.3",
     "@angular/cli": "^6.0.3",
     "@angular/compiler-cli": "^6.0.3",
@@ -55,9 +56,9 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "require": "^2.4.20",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.7.2",
-    "@angular-devkit/build-angular": "~0.6.3"
+    "typescript": "~2.7.2"
   }
 }
