upgraded ag-grid to latest version(21)

--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@angular/platform-browser": "^8.2.3",
     "@angular/platform-browser-dynamic": "^8.2.3",
     "@angular/router": "^8.2.3",
-    "ag-grid": "^17.1.1",
-    "ag-grid-angular": "^17.1.0",
+    "ag-grid-angular": "^21.1.0",
+    "ag-grid-community": "^21.1.1",
+    "ag-grid-enterprise": "^21.1.1",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.3.0",
     "npm": "^6.1.0",
     "rxjs": "^6.3.3",
