install tslib required by aggrid

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "npm": "^6.1.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
+    "tslib": "^2.0.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
