--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
         "lib": ["es2017", "dom"]
     },
     "angularCompilerOptions": {
-        "enableIvy": false
+        "enableIvy": true
     }
 }
