service worker added for prod build

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "restart": "npm restart",
-    "prod-build": "ng build --prod --aot --output-path \".\\dist\\prod\" --base-href=/virtual-path/",
+    "test-pwa": "http-server -c-1 --proxy https://localhost:3000 .\\dist\\prod",
+    "prod-build": "ng build --prod --aot --output-path \".\\dist\\prod\" --base-href=/",
     "qa-build": "ng build --configuration=qa --output-path \".\\dist\\qa\" --base-href=/virtual-path/",
     "uat-build": "ng build --configuration=uat --output-path \".\\dist\\uat\" --base-href=/virtual-path/",
     "build": "npm run prod-build && npm run qa-build && npm run uat-build",
@@ -46,6 +47,7 @@
     "@angular/platform-browser": "^9.1.7",
     "@angular/platform-browser-dynamic": "^9.1.7",
     "@angular/router": "^9.1.7",
+    "@angular/service-worker": "^9.1.7",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.0.1",
