--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
                             },
                             "src/assets",
                             "src/favicon.ico",
-                            "src/web.config"
+                            "src/web.config",
+                            "src/manifest.webmanifest"
                         ],
                         "styles": ["src/styles.css"],
                         "scripts": []
@@ -45,7 +46,9 @@
                                     "replace": "src/environments/environment.ts",
                                     "with": "src/environments/environment.prod.ts"
                                 }
-                            ]
+                            ],
+                            "serviceWorker": true,
+                            "ngswConfigPath": "ngsw-config.json"
                         },
                         "qa": {
                             "fileReplacements": [
@@ -99,7 +102,7 @@
                         "styles": [
                             "src/styles.css"
                         ],
-                        "assets": ["src/assets", "src/favicon.ico"]
+                        "assets": ["src/assets", "src/favicon.ico", "src/manifest.webmanifest"]
                     }
                 },
                 "lint": {
